--- a/color-game/colorGame.css
+++ b/color-game/colorGame.css
@@ -16,13 +16,7 @@ body {
 }
 
 h1 {
-    color: black;
+    color: white;
     text-align: center;
     text-transform: capitalize;
-}
-
-#topPart {
-    border: 2px solid yellow;
-    background: greenyellow;
-    padding: 10%;
 }
