--- a/color-game/colorGame.css
+++ b/color-game/colorGame.css
@@ -19,4 +19,16 @@ h1 {
     color: white;
     text-align: center;
     text-transform: capitalize;
+    padding: 8%;
+}
+
+#stripe {
+    background-color: aliceblue;
+    height: 30px;
+    text-align: center;
+    color: black;
+}
+
+.selected {
+    background-color: blue;
 }
