game logic completed

--- a/color-game/colorGame.css
+++ b/color-game/colorGame.css
@@ -19,7 +19,7 @@ h1 {
     color: white;
     text-align: center;
     text-transform: capitalize;
-    padding: 8%;
+    padding: 90px;
 }
 
 #stripe {
