--- a/color-game/colorGame.css
+++ b/color-game/colorGame.css
@@ -1,5 +1,7 @@
 body {
     background: #232323;
+    margin: 0;
+    font-family: "Avenir";
 }
 
 .square {
@@ -8,18 +10,26 @@ body {
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 15%;
+    transition: background 0.8s;
+    -webkit-transition: background 0.8s;
+    -moz-transition: background 0.8s;
 }
 
 #container {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 
 h1 {
     color: white;
+    line-height: 1.1;
     text-align: center;
-    text-transform: capitalize;
-    padding: 90px;
+    text-transform: uppercase;
+    background-color: steelblue;
+    padding: 20px 0;
+    margin: 0;
+    font-weight: normal;
 }
 
 #stripe {
@@ -30,5 +40,35 @@ h1 {
 }
 
 .selected {
-    background-color: blue;
+    color: white;
+    background: steelblue;
+}
+
+#colorDisplay {
+    font-size: 200%
+}
+
+#message {
+    display: inline-block;
+    width: 20%;
+}
+
+button {
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    color: steelblue;
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+
+}
+
+button:hover {
+    color: white;
+    background: steelblue;
 }
