--- a/color-game/colorGame.css
+++ b/color-game/colorGame.css
@@ -30,6 +30,7 @@ h1 {
     padding: 20px 0;
     margin: 0;
     font-weight: normal;
+    transition: background 0.8s;
 }
 
 #stripe {
@@ -65,6 +66,7 @@ button {
     transition: all 0.3s;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
+    outline: none;
 
 }
 
